# haskell_musical_composition

./: .gitignore  CHANGELOG.md  README.md  grammar.txt  haskell-musical-composition.cabal
app/: Main.hs
src/Input/: Fundamental.hs  Help.hs  Helpers.hs  Lexer.hs  Mappings.hs  Messages.hs  Parser.hs  State.hs
src/MIDI/: FromMIDI.hs  InstrChannel.hs  Performance.hs  Synthesizer.hs  ToMIDI.hs
src/Music/: Data.hs  Show.hs  Utils.hs
src/Visual/: CreateScore.hs  OpenHtml.hs  ToJSON.hs  UploadFile.hs
src/resources/: index.html  script.js  styles.css  stylesVis.css  vis.html  vis.js
src/resources/static/: circles.js  index.html  notes.json  script.js  vis.html  vis.js
src/resources/static/vis/: circles.js  groups.js  utils.js
src/static/: script.js  styles.css
