cabal-version:      2.4
name:               haskell-musical-composition
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maria Verdeș
maintainer:         mariaverdes14@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Music.Data
        Music.Utils
        Music.Show
        MIDI.Performance
        MIDI.ToMIDI
        MIDI.InstrChannel
        MIDI.Synthesizer
        MIDI.FromMIDI
        Input.Parser
        Input.Fundamental
        Input.Mappings
        Input.State
        Input.Helpers
        Input.Messages
        Visual.UploadFile
        Visual.CreateScore

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        HCodecs ^>=0.5.2,
        PortMidi ^>=0.2.0,
        parsec, mtl, filepath,
        http-client, http-client-tls,
        bytestring, http-types, text,
        process
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-musical-composition
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        HCodecs ^>=0.5.2,
        PortMidi ^>=0.2.0,
        parsec, mtl, filepath,
        http-client, http-client-tls,
        bytestring, http-types, text,
        process,
        haskell-musical-composition

    hs-source-dirs:   app
    default-language: Haskell2010
